<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.asus.burnnews.Activity.MainActivity">

    <LinearLayout
        android:background="#fb7299"
        android:layout_width="match_parent"
        android:layout_height="65dp">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            app:theme="@style/toolBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
<LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<ImageView
    android:id="@+id/touxiang"
    android:layout_gravity="center"
    android:layout_width="30dp"
    android:layout_height="30dp" />
    <TextView
        android:layout_marginLeft="20dp"
        android:layout_gravity="center"
        android:padding="5dp"
        android:textStyle="bold"
        android:textSize="30dp"
        android:text="@string/burnnews"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/fenxiang"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:background="@mipmap/fenxiang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
</LinearLayout>
        </android.support.v7.widget.Toolbar>
    </LinearLayout>

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/dl"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <FrameLayout
                android:layout_above="@+id/llll"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:id="@+id/main_zixun"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <RelativeLayout
                        android:background="#fb7299"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="50dp">
                        <android.support.design.widget.TabLayout
                            android:id="@+id/main_tl"
                            app:tabMode="scrollable"
                            android:layout_toLeftOf="@+id/main_add"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentStart="true"
                            app:tabTextColor="#b2ffffff"
                            app:tabSelectedTextColor="@color/white"
                            app:tabIndicatorColor="@color/white">
                        </android.support.design.widget.TabLayout>
                        <ImageView
                            android:layout_marginRight="10dp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:id="@+id/main_add"
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@mipmap/tiaojia"/>
                    </RelativeLayout>

                    <android.support.v4.view.ViewPager
                        android:id="@+id/main_vp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentStart="true">

                    </android.support.v4.view.ViewPager>
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:id="@+id/main_redian"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </LinearLayout>
                <LinearLayout
                    android:visibility="gone"
                    android:orientation="vertical"
                    android:id="@+id/main_sousuo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:padding="10dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/ed"
                            android:imeOptions="actionSearch"
                            android:singleLine="true"
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />
                        <Button
                            android:id="@+id/shousuojian"
                            android:layout_marginLeft="20dp"
                            android:layout_weight="2"
                            android:background="#fb7299"
                            android:text="搜  索"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:layout_width="match_parent"
                            android:layout_height="40dp" />
                    </LinearLayout>
                    <LinearLayout
                        android:orientation="vertical"
                        android:id="@+id/sousuol"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    </LinearLayout>
                </LinearLayout>
            </FrameLayout>
            <LinearLayout
                android:id="@+id/llll"
                android:orientation="horizontal"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="65dp">
                <com.ashokvarma.bottomnavigation.BottomNavigationBar
                    android:id="@+id/diaodibu"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </com.ashokvarma.bottomnavigation.BottomNavigationBar>
            </LinearLayout>
        </RelativeLayout>
        <LinearLayout
            android:clickable="true"
            android:background="#ffffff"
            android:orientation="vertical"
            android:layout_gravity="left"
            android:layout_width="300dp"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:background="#fb7299"
                android:layout_width="300dp"
                android:layout_height="200dp">
                <com.ant.liao.GifView
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/niupigu"
                    android:layout_width="150dp"
                    android:layout_height="100dp" />
                <FrameLayout
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/login"
                        android:textStyle="bold"
                        android:text="@string/ljdl"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20dp"
                        />
                    <TextView
                        android:id="@+id/zhuxiao"
                        android:text="@string/zxyh"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />
                </FrameLayout>

            </LinearLayout>
<LinearLayout
    android:id="@+id/myshoucang"
    android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/shoucang"/>
            <TextView
                android:textSize="22dp"
                android:textStyle="bold"
                android:layout_marginLeft="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wdsc"/>
        </LinearLayout>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:background="#727272"
                android:layout_width="match_parent"
                android:layout_height="1dp"></LinearLayout>
            <LinearLayout
                android:id="@+id/forus"
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/us"/>
                <TextView
                    android:textSize="22dp"
                    android:textStyle="bold"
                    android:layout_marginLeft="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gywm"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/shezhi"/>
                <TextView
                    android:textSize="22dp"
                    android:textStyle="bold"
                    android:layout_marginLeft="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sz"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.DrawerLayout>

</LinearLayout>
